--- a/teamWebsite/view/html/contact.html
+++ b/teamWebsite/view/html/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="../css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-grid.css">
 	<link href="css/bootstrap-reboot.css">
 	<title>Team</title>
@@ -16,7 +16,7 @@
 
 <body>
 	<nav class="nav">
-		<a class="nav-link" href="index.html">Home</a>
+		<a class="nav-link" href="../../index.html">Home</a>
 		<a class="nav-link" href="gameCategories.html">Game Categories</a>
 		<a class="nav-link" href="newFriendInfo.html">New Friend Information</a>
 		<a class="nav-link" href="login.html">Login</a>
