--- a/teamWebsite/view/html/login.html
+++ b/teamWebsite/view/html/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="../css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-grid.css">
 	<link href="css/bootstrap-reboot.css">
 	<title>Team</title>
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 	<nav class="nav">
-		<a class="nav-link" href="index.html">Home</a>
+		<a class="nav-link" href="../../index.html">Home</a>
 		<a class="nav-link" href="gameCategories.html">Game Categories</a>
 		<a class="nav-link" href="newFriendInfo.html">New Friend Information</a>
 		<a class="nav-link active" href="login.html">Login</a>
