--- a/teamWebsite/view/html/register.html
+++ b/teamWebsite/view/html/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="../css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-grid.css">
 	<link href="css/bootstrap-reboot.css">
 	<title>Team</title>
