--- a/teamWebsite/view/html/newFriendInfo.html
+++ b/teamWebsite/view/html/newFriendInfo.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="../css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-grid.css">
 	<link href="css/bootstrap-reboot.css">
 	<title>Team</title>
@@ -13,7 +13,7 @@
 
 <body>
 	<nav class="nav">
-		<a class="nav-link" href="index.html">Home</a>
+		<a class="nav-link" href="../../index.html">Home</a>
 		<a class="nav-link" href="gameCategories.html">Game Categories</a>
 		<a class="nav-link active" href="newFriendInfo.html">New Friend Information</a>
 		<a class="nav-link" href="login.html">Login</a>
