Registration implemented, login in progress

--- a/teamWebsite/view/html/login.html
+++ b/teamWebsite/view/html/login.html
@@ -19,7 +19,7 @@
 		<a class="nav-link" href="contact.html">Contact</a>
 		</nav>
 			<section class="content">
-	<form>
+	<form action="../../controller/loginUser.php" method="post">
 		<legend>Log In</legend>
 		<div class="form-group">
 			<label for="username">Username</label>
@@ -30,7 +30,7 @@
 			<input type="password" id="password" class="form-control">
 		</div>
 		<button type="submit" class="btn btn-primary">Log In</button>
-		<button type="Register" class="btn btn-primary"><a href="register.html">Register</a></button>
+		<a href="register.html">Don't have an account?</a>
 	</form>
 		</section>
 		<footer>Team</footer>
