--- a/teamWebsite/view/html/register.html
+++ b/teamWebsite/view/html/register.html
@@ -1,3 +1,7 @@
+<?php
+$conn = new PDO("mysql:host=localhost;dbname=teamDatabase", 'root', 'root');
+?>
+
 <!doctype html>
 <html>
 <head>
@@ -19,11 +23,11 @@
 		<a class="nav-link" href="contact.html">Contact</a>
 		</nav>
 			<section class="content">
-	<form>
+	<form action="../../controller/registerUser.php" method="post">
 		<legend>Register</legend>
 		<div class="form-group">
 			<label for="email">Email</label>
-			<input type="email" class="form-control" id="username" name="username">
+			<input type="email" class="form-control" id="email" name="email">
 		</div>
 		<div class="form-group">
 			<label for="username">Username</label>
@@ -31,11 +35,7 @@
 		</div>
 		<div class="form-group">
 			<label for="password">Password</label>
-			<input type="password" id="password" class="form-control">
-		</div>
-		<div class="form-group">
-			<label for="passwordCheck">Confirm Password</label>
-			<input type="password" id="passwordCheck" class="form-control">
+			<input type="password" name="password" id="password" class="form-control">
 		</div>
 		<button type="submit" class="btn btn-primary">Sign Up</button>
 	</form>
